Fixed list games error